--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["contextmenu", "localstorage", "toastify"]
+  "cSpell.words": ["contextmenu", "localstorage", "Swipeable", "toastify"]
 }
