--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "react": "^17.0.2",
     "react-contextmenu": "^2.14.0",
     "react-dom": "^17.0.2",
+    "react-overflow": "^0.2.1",
+    "react-overflow-scrolling": "^1.0.1",
     "react-rnd": "^10.3.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "react-swipeable-views": "^0.14.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
